# mob-tfm

./: .gitignore  README.md  pyproject.toml
src/docs/commands/: README.config.md  README.doctor.md  README.explain.md  README.generate.md  README.help.md  README.parse.md  README.unspine.md  README.version.md
src/docs/generators/: README.address.md  README.century.md  README.company.md  README.company_email.md  README.email.md  README.firstname.md  README.float.md  README.int.md  README.lang.md  README.lastname.md  README.name.md  README.phone.md
src/mob_tfm/: __init__.py  main.py
src/mob_tfm/commands/: __init__.py  explain.py  generate.py  help.py  parse.py  unspine.py
src/mob_tfm/utils/: generate_utils.py
